OpenJMLTest/test/gitbug718x2/expected
test/gitbug718x2/test2.java:3: error: An initializer clause may not have annotations
	public /* static_initializer @*/ static final /*@ readonly static_initializer @*/ int /*@ non_null */ [] binarr = new int[]
	                                                  ^
test/gitbug718x2/test2.java:3: error: Invalid modifiers for an initializer clause: static final
	public /* static_initializer @*/ static final /*@ readonly static_initializer @*/ int /*@ non_null */ [] binarr = new int[]
	^
Operation not performed because of parse or type errors
12 errors
